fix wrong padding on larger devices

--- a/src/components/ui/PostSkeleton/PostSkeleton.module.scss
+++ b/src/components/ui/PostSkeleton/PostSkeleton.module.scss
@@ -9,8 +9,12 @@
   border-bottom: solid 1px hsla(0, 0%, 50%, 0.2);
 
   color: var(--text-color-main);
-  padding: 0 1rem;
+  padding: 0 1rem 1rem 1rem;
   gap: 1rem;
+
+  @media (min-width: 768px) {
+    padding: 0 0 1rem 0;
+  }
 
   .cardTop {
     display: flex;
