--- a/src/components/ui/WorkoutPost/WorkoutPost.module.scss
+++ b/src/components/ui/WorkoutPost/WorkoutPost.module.scss
@@ -7,7 +7,7 @@
   padding: 0 1rem 1rem 1rem;
   gap: 1rem;
 
-  @media (min-width: 900px) {
+  @media (min-width: 768px) {
     padding: 0 0 1rem 0;
   }
 }
